// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable links if application has inaccessible projects 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          overview.page
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          issues.page
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          layout.security_hotspots
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          layout.measures
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          view_projects.page
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          project_activity.page
        </a>
      </Tooltip>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <Tooltip
        overlay="layout.all_project_must_be_accessible.qualifier.APP"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          application.info.title
        </a>
      </Tooltip>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should disable links if no analysis has been done 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <Tooltip
        overlay="layout.must_be_configured"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          issues.page
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.must_be_configured"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          layout.security_hotspots
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.must_be_configured"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          layout.measures
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.must_be_configured"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          code.page
        </a>
      </Tooltip>
    </li>
    <li>
      <Tooltip
        overlay="layout.must_be_configured"
      >
        <a
          aria-disabled="true"
          className="disabled-link"
        >
          project_activity.page
        </a>
      </Tooltip>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should render correctly for security extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          ComponentBar
        </NavLink>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should render correctly for security extensions 2`] = `null`;

exports[`should work for a branch 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo&branch=release",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&branch=release&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo&branch=release",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo&branch=release",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo&branch=release",
          }
        }
      >
        code.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo&branch=release",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "search": "id=foo&branch=release&qualifier=TRK",
                }
              }
            >
              ComponentFoo
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/settings",
                  "search": "id=foo&branch=release",
                }
              }
            >
              project_settings.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/branches",
                  "search": "id=foo&branch=release",
                }
              }
            >
              project_branch_pull_request.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/baseline",
                  "search": "id=foo&branch=release",
                }
              }
            >
              project_baseline.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/import_export",
                  "search": "id=foo&branch=release",
                }
              }
            >
              project_dump.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/webhooks",
                  "search": "id=foo&branch=release",
                }
              }
            >
              webhooks.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo&branch=release",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for a branch 2`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo&branch=release",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&branch=release&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo&branch=release",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo&branch=release",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo&branch=release",
          }
        }
      >
        code.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo&branch=release",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "search": "id=foo&branch=release&qualifier=TRK",
                }
              }
            >
              ComponentFoo
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for pull requests 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo&pullRequest=1001",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&pullRequest=1001&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        code.page
      </NavLink>
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "search": "id=foo&pullRequest=1001&qualifier=TRK",
                }
              }
            >
              ComponentFoo
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for pull requests 2`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo&pullRequest=1001",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&pullRequest=1001&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo&pullRequest=1001",
          }
        }
      >
        code.page
      </NavLink>
    </li>
    <Dropdown
      data-test="extensions"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/extension/component-foo",
                  "search": "id=foo&pullRequest=1001&qualifier=TRK",
                }
              }
            >
              ComponentFoo
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for qualifier: APP, false 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo",
          }
        }
      >
        view_projects.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        application.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for qualifier: SVW, false 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for qualifier: SVW, true 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/portfolio",
            "search": "?id=foo",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo",
          }
        }
      >
        portfolio_breakdown.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs />
</div>
`;

exports[`should work for qualifier: TRK, false 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/dashboard",
            "search": "?id=foo",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/security_hotspots",
            "search": "id=foo",
          }
        }
      >
        layout.security_hotspots
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo",
          }
        }
      >
        code.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/settings",
                  "search": "id=foo",
                }
              }
            >
              project_settings.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/branches",
                  "search": "id=foo",
                }
              }
            >
              project_branch_pull_request.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/baseline",
                  "search": "id=foo",
                }
              }
            >
              project_baseline.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/import_export",
                  "search": "id=foo",
                }
              }
            >
              project_dump.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/webhooks",
                  "search": "id=foo",
                }
              }
            >
              webhooks.page
            </NavLink>
          </li>
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
    <li>
      <a
        className="menu-button"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <BulletListIcon
          className="little-spacer-right"
        />
        project.info.title
      </a>
    </li>
  </NavBarTabs>
</div>
`;

exports[`should work for qualifier: VW, false 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
</div>
`;

exports[`should work for qualifier: VW, true 1`] = `
<div
  className="display-flex-center display-flex-space-between"
>
  <NavBarTabs>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/portfolio",
            "search": "?id=foo",
          }
        }
      >
        overview.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/code",
            "search": "id=foo",
          }
        }
      >
        portfolio_breakdown.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/issues",
            "search": "id=foo&resolved=false",
          }
        }
      >
        issues.page
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/component_measures",
            "search": "id=foo",
          }
        }
      >
        layout.measures
      </NavLink>
    </li>
    <li>
      <NavLink
        to={
          Object {
            "pathname": "/project/activity",
            "search": "id=foo",
          }
        }
      >
        project_activity.page
      </NavLink>
    </li>
  </NavBarTabs>
  <NavBarTabs>
    <Dropdown
      data-test="administration"
      overlay={
        <ul
          className="menu"
        >
          <li>
            <NavLink
              to={
                Object {
                  "pathname": "/project/deletion",
                  "search": "id=foo",
                }
              }
            >
              deletion.page
            </NavLink>
          </li>
        </ul>
      }
      tagName="li"
    >
      <Component />
    </Dropdown>
  </NavBarTabs>
</div>
`;

exports[`should work with extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          ComponentFoo
        </NavLink>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/settings",
              "search": "id=foo",
            }
          }
        >
          project_settings.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/branches",
              "search": "id=foo",
            }
          }
        >
          project_branch_pull_request.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/baseline",
              "search": "id=foo",
            }
          }
        >
          project_baseline.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          Foo
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/import_export",
              "search": "id=foo",
            }
          }
        >
          project_dump.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/webhooks",
              "search": "id=foo",
            }
          }
        >
          webhooks.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/deletion",
              "search": "id=foo",
            }
          }
        >
          deletion.page
        </NavLink>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          ComponentFoo
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          ComponentBar
        </NavLink>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/settings",
              "search": "id=foo",
            }
          }
        >
          project_settings.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/branches",
              "search": "id=foo",
            }
          }
        >
          project_branch_pull_request.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/baseline",
              "search": "id=foo",
            }
          }
        >
          project_baseline.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          Foo
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/admin/extension/bar",
              "search": "id=foo&qualifier=TRK",
            }
          }
        >
          Bar
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/import_export",
              "search": "id=foo",
            }
          }
        >
          project_dump.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/webhooks",
              "search": "id=foo",
            }
          }
        >
          webhooks.page
        </NavLink>
      </li>
      <li>
        <NavLink
          to={
            Object {
              "pathname": "/project/deletion",
              "search": "id=foo",
            }
          }
        >
          deletion.page
        </NavLink>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;
